<resources>
    <string name="app_name">Laundry</string>
    <string name="card_pegawai">ID Pegawai</string>
    <string name="nama">Nama Pegawai</string>
    <string name="alamat">Alamat</string>
    <string name="terdaftar">Terdaftar</string>
    <string name="nomor">Nomor Telephone</string>
    <string name="hubungi">Hubungi</string>
    <string name="lihat">Lihat</string>
    <string name="cabang">Cabang</string>
    <string name="tambah_pelanggan">Tambah Pelanggan</string>
    <string name="nama_pelanggan">Nama Pelanggan</string>
    <string name="nama_cabang">Nama Cabang</string>
    <string name="card_pelanggan">ID Pelanggan</string>
    <string name="tanggal">Tanggal Lahir</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="Laki">Laki-Laki</string>
    <string name="Perempuan">Perempuan</string>
    <string name="simpan">Simpan</string>
    <string name="layanan">ID Layanan</string>
    <string name="nama_layanan">Nama Layanan</string>
    <string name="harga">Harga</string>
    <string name="validasi_nama_pelanggan">validasi</string>
    <string name="validasi_alamat_pelanggan">alamat</string>
    <string name="validasi_nomor">nomor</string>
    <string name="validasi_cabang">cabang</string>
    <string name="sukses_simpan_pelanggan">berhasil</string>
    <string name="gagal_simpan_pelanggan">gagal, ulangi</string>
    <string name="tambah_layanan">layanan</string>
    <string name="tambah_cabang">cabang</string>
    <string name="alamat_mana">alamatlengkap</string>
    <string name="card_cabang">cabang lagi</string>
    <string name="validasi_harga">harga</string>
    <string name="validasi_layanan">layanan</string>
    <string name="sukses_simpan_cabang">cabang</string>
    <string name="gagal_simpan_cabang">cabang</string>
    <string name="tambahpegawai">tambahpegawai</string>
    <string name="tvJudulTambahPegawai">Tambah Pegawai</string>
    <string name="Data_Pegawai_Berhasi_Diperbaharui">Data Pegawai Berhasi Diperbaharui</string>
    <string name="Data_Pegawai_Gagal_Diperbaharui">Data Pegawai Gagal Diperbaharui</string>
</resources>