<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardBackgroundColor="#F8F4E1"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/tvIDLayanan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/layanan"
                android:textColor="@color/black"
                android:background="#B6C7AA"
                android:textSize="18sp"
                android:textStyle="bold"
                android:paddingStart="16dp"
                android:paddingTop="8dp"/>

            <TextView
                android:id="@+id/tvNamaLayanan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nama_layanan"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:paddingStart="15dp"
                android:paddingTop="5dp"/>

            <TextView
                android:id="@+id/tvHarga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/harga"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:paddingStart="15dp"
                android:paddingTop="5dp"/>

            <TextView
                android:id="@+id/tvCabang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nama_cabang"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:paddingStart="15dp"
                android:paddingTop="5dp"/>
        </LinearLayout>

        <Button
            android:id="@+id/btHubungi"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:text="@string/hubungi"
            android:backgroundTint="#795757"
            android:layout_marginStart="10dp"
            android:layout_marginTop="125dp"/>

        <Button
            android:id="@+id/btLihat"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/lihat"
            android:backgroundTint="#948979"
            android:layout_marginStart="200dp"
            android:layout_marginTop="125dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvDataPelanggan"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/tvID"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
        </androidx.cardview.widget.CardView>
</androidx.cardview.widget.CardView>