<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pelanggan.TambahPelanggan">

  <TextView
      android:id="@+id/tvJudul"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:layout_marginEnd="5dp"
      android:text="@string/tambah_pelanggan"
      android:textSize="28dp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/tvNama"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="50dp"
      android:layout_marginEnd="170dp"
      android:text="@string/nama_pelanggan"
      android:textSize="22dp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tvJudul" />

  <EditText
      android:id="@+id/etNama"
      android:layout_width="340dp"
      android:layout_height="50dp"
      android:hint="@string/nama_pelanggan"
      android:paddingStart="10dp"
      android:textColor="#BCCCDC"
      android:textSize="18sp"
      android:layout_marginTop="20dp"
      android:layout_marginEnd="10dp"
      android:background="@drawable/edittext_border"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/tvNama"/>

  <TextView
      android:id="@+id/tvAlamat"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:layout_marginEnd="250dp"
      android:text="@string/alamat"
      android:textSize="22dp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/etNama"/>

  <EditText
      android:id="@+id/etAlamat"
      android:layout_width="340dp"
      android:layout_height="50dp"
      android:hint="@string/alamat"
      android:paddingStart="10dp"
      android:textColor="#BCCCDC"
      android:textSize="18sp"
      android:layout_marginTop="20dp"
      android:layout_marginEnd="10dp"
      android:background="@drawable/edittext_border"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/tvAlamat"/>

  <TextView
      android:id="@+id/tvHP"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:layout_marginEnd="150dp"
      android:text="@string/nomor"
      android:textSize="22dp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/etAlamat"/>

  <EditText
      android:id="@+id/etHP"
      android:layout_width="340dp"
      android:layout_height="50dp"
      android:hint="@string/nomor"
      android:paddingStart="10dp"
      android:textColor="#BCCCDC"
      android:textSize="18sp"
      android:layout_marginTop="20dp"
      android:layout_marginEnd="10dp"
      android:background="@drawable/edittext_border"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/tvHP"/>

  <TextView
      android:id="@+id/tvCabang"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:layout_marginEnd="200dp"
      android:text="@string/nama_cabang"
      android:textSize="22dp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/etHP"/>

  <EditText
      android:id="@+id/etCabang"
      android:layout_width="340dp"
      android:layout_height="50dp"
      android:hint="@string/nama_cabang"
      android:textColor="#BCCCDC"
      android:textSize="18sp"
      android:paddingStart="10dp"
      android:layout_marginTop="20dp"
      android:layout_marginEnd="10dp"
      android:background="@drawable/edittext_border"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/tvCabang"/>

  <Button
      android:id="@+id/btSimpan"
      android:layout_width="340dp"
      android:layout_height="50dp"
      android:text="Simpan"
      android:backgroundTint="#ADA991"
      app:layout_constraintTop_toBottomOf="@+id/etCabang"
      android:layout_marginTop="30dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>