<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cabang.TambahCabang">

    <TextView
        android:id="@+id/tvJudul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:text="@string/tambah_cabang"
        android:textSize="28dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTambahCabang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="190dp"
        android:text="@string/tambah_cabang"
        android:textSize="22dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvJudul" />

    <EditText
        android:id="@+id/etTambahCabang"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:hint="@string/tambah_cabang"
        android:paddingStart="10dp"
        android:textColor="#BCCCDC"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/edittext_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTambahCabang"/>

    <TextView
        android:id="@+id/tvAlamat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="280dp"
        android:text="@string/alamat"
        android:textSize="22dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etTambahCabang"/>

    <EditText
        android:id="@+id/etAlamat"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:hint="@string/alamat_mana"
        android:paddingStart="10dp"
        android:textColor="#BCCCDC"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/edittext_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAlamat"/>

    <TextView
        android:id="@+id/tvNoHP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="170dp"
        android:text="@string/nomor"
        android:textSize="22dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etAlamat"/>

    <EditText
        android:id="@+id/etNomor"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:hint="@string/nomor"
        android:paddingStart="10dp"
        android:textColor="#BCCCDC"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/edittext_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvNoHP"/>

    <TextView
        android:id="@+id/tvLayanan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="195dp"
        android:text="@string/nama_layanan"
        android:textSize="22dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etNomor"/>

    <EditText
        android:id="@+id/etLayanan"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:hint="@string/nama_layanan"
        android:paddingStart="10dp"
        android:textColor="#BCCCDC"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/edittext_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLayanan"/>

    <Button
        android:id="@+id/btSimpan"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:text="Simpan"
        android:backgroundTint="#ADA991"
        app:layout_constraintTop_toBottomOf="@+id/etLayanan"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>